@@ -22,9 +22,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -32,12 +31,10 @@ import com.michelin.ns4kafka.model.AccessControlEntry;
 import com.michelin.ns4kafka.model.KafkaStream;
 import com.michelin.ns4kafka.model.Namespace;
 import com.michelin.ns4kafka.model.Resource;
-import com.michelin.ns4kafka.model.Topic;
 import com.michelin.ns4kafka.property.ManagedClusterProperties;
 import com.michelin.ns4kafka.repository.StreamRepository;
 import com.michelin.ns4kafka.service.executor.AccessControlEntryAsyncExecutor;
 import io.micronaut.context.ApplicationContext;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
@@ -310,7 +307,7 @@ class StreamServiceTest {
                         .name("test_stream2")
                         .namespace("test")
                         .cluster("local")
-                        .status(Resource.Metadata.Status.ofCreating())
+                        .status(Resource.Metadata.Status.ofPending())
                         .build())
                 .build();
         KafkaStream stream3 = KafkaStream.builder()
@@ -503,48 +500,6 @@ class StreamServiceTest {
                         .build())
                 .build();
 
-        Topic topic1 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-repartition")
-                        .build())
-                .build();
-
-        Topic topic2 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-changelog")
-                        .build())
-                .build();
-
-        Topic topic3 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-norepartition")
-                        .build())
-                .build();
-
-        Topic topic4 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-nochangelog")
-                        .build())
-                .build();
-
-        Topic topic5 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix2.stream_app_id2-topic1-norepartition")
-                        .build())
-                .build();
-
-        Topic topic6 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix2.stream_app_id2-topic2-nochangelog")
-                        .build())
-                .build();
-
-        Topic topic7 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-sub-appid-overlap-topic1-repartition")
-                        .build())
-                .build();
-
         KafkaStream kafkaStream = KafkaStream.builder()
                 .metadata(Resource.Metadata.builder()
                         .namespace("ns")
@@ -564,126 +519,13 @@ class StreamServiceTest {
         List<KafkaStream> kafkaStreams = List.of(kafkaStream);
         when(streamRepository.findAllForCluster(any())).thenReturn(kafkaStreams);
 
-        List<Topic> allTopics = List.of(topic1, topic2, topic3, topic4, topic5, topic6, topic7);
-        when(topicService.findByWildcardName(eq(namespace), anyString())).thenReturn(allTopics);
+        doNothing()
+                .when(topicService)
+                .deleteKafkaStream(
+                        namespace, "prefix1.stream_app_id1", List.of("prefix1.stream_app_id1-sub-appid-overlap"));
 
         streamService.delete(namespace, stream);
         verify(aceAsyncExecutor).deleteKafkaStreams(namespace, stream);
-        verify(topicService).create(topic1);
-        verify(topicService).create(topic2);
-        verify(topicService, never()).create(topic3);
-        verify(topicService, never()).create(topic4);
-        verify(topicService, never()).create(topic5);
-        verify(topicService, never()).create(topic6);
-        verify(topicService, never()).create(topic7);
-        verify(streamRepository).delete(stream);
-    }
-
-    @Test
-    void shouldDeleteKafkaStreamAndRelatedTopicsWhenOverlapKafkaStreamsIsEmpty() throws Exception {
-        Namespace namespace = Namespace.builder()
-                .metadata(
-                        Resource.Metadata.builder().name("ns").cluster("local").build())
-                .build();
-
-        KafkaStream stream = KafkaStream.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix.stream_app_id")
-                        .namespace("ns")
-                        .cluster("local")
-                        .build())
-                .build();
-
-        Topic topic1 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-repartition")
-                        .build())
-                .build();
-
-        Topic topic2 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-changelog")
-                        .build())
-                .build();
-
-        Topic topic3 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-norepartition")
-                        .build())
-                .build();
-
-        Topic topic4 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix1.stream_app_id1-topic1-nochangelog")
-                        .build())
-                .build();
-
-        Topic topic5 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix2.stream_app_id2-topic1-norepartition")
-                        .build())
-                .build();
-
-        Topic topic6 = Topic.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix2.stream_app_id2-topic2-nochangelog")
-                        .build())
-                .build();
-
-        ManagedClusterProperties managedClusterProps =
-                new ManagedClusterProperties("local", ManagedClusterProperties.KafkaProvider.SELF_MANAGED);
-        Properties properties = new Properties();
-        managedClusterProps.setConfig(properties);
-        managedClusterProps.setManageAcls(true);
-
-        when(managedClusterProperties.stream()).thenReturn(Stream.of(managedClusterProps));
-        when(applicationContext.getBean(eq(AccessControlEntryAsyncExecutor.class), any()))
-                .thenReturn(aceAsyncExecutor);
-        when(streamRepository.findAllForCluster(any())).thenReturn(Collections.emptyList());
-
-        List<Topic> allTopics = List.of(topic1, topic2, topic3, topic4, topic5, topic6);
-        when(topicService.findByWildcardName(eq(namespace), anyString())).thenReturn(allTopics);
-
-        streamService.delete(namespace, stream);
-        verify(aceAsyncExecutor).deleteKafkaStreams(namespace, stream);
-        verify(topicService).create(topic1);
-        verify(topicService).create(topic2);
-        verify(topicService, never()).create(topic3);
-        verify(topicService, never()).create(topic4);
-        verify(topicService, never()).create(topic5);
-        verify(topicService, never()).create(topic6);
-        verify(streamRepository).delete(stream);
-    }
-
-    @Test
-    void shouldNotCallDeleteTopicsWhenStreamTopicListIsEmpty() throws Exception {
-        Namespace ns = Namespace.builder()
-                .metadata(
-                        Resource.Metadata.builder().name("ns").cluster("local").build())
-                .build();
-
-        KafkaStream stream = KafkaStream.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("prefix.stream_app_id")
-                        .namespace("ns")
-                        .cluster("local")
-                        .build())
-                .build();
-
-        ManagedClusterProperties managedClusterProps =
-                new ManagedClusterProperties("local", ManagedClusterProperties.KafkaProvider.SELF_MANAGED);
-        Properties properties = new Properties();
-        managedClusterProps.setConfig(properties);
-        managedClusterProps.setManageAcls(true);
-
-        when(managedClusterProperties.stream()).thenReturn(Stream.of(managedClusterProps));
-        when(applicationContext.getBean(eq(AccessControlEntryAsyncExecutor.class), any()))
-                .thenReturn(aceAsyncExecutor);
-        when(topicService.findByWildcardName(eq(ns), anyString())).thenReturn(List.of()); // No topics
-
-        streamService.delete(ns, stream);
-
-        verify(topicService, never()).create(any());
         verify(streamRepository).delete(stream);
     }
 
@@ -712,8 +554,8 @@ class StreamServiceTest {
         when(managedClusterProperties.stream()).thenReturn(Stream.of(managedClusterProps));
         when(applicationContext.getBean(eq(AccessControlEntryAsyncExecutor.class), any()))
                 .thenReturn(aceAsyncExecutor);
-        when(streamRepository.findAllForCluster(any())).thenReturn(Collections.emptyList());
-        when(topicService.findByWildcardName(eq(namespace), anyString())).thenReturn(List.of());
+        when(streamRepository.findAllForCluster(any())).thenReturn(List.of());
+        doNothing().when(topicService).deleteKafkaStream(namespace, "prefix.stream_app_id", List.of());
 
         streamService.delete(namespace, stream);
 
